src/objects/Income_Level_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting will be used to map Income and Household Size to Income Levels.</description>
    <fields>
        <fullName>High_End__c</fullName>
        <description>High End of Income Bracket, this number will not be included. The income will be checked up to this number.</description>
        <inlineHelpText>High End of Income Bracket, this number will not be included. The income will be checked up to this number.</inlineHelpText>
        <label>High End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Category__c</fullName>
        <description>This is the level for the Household and this value will be returned to populate the Income Level on the Case Record.</description>
        <inlineHelpText>This is the level for the Household and this value will be returned to populate the Income Level on the Case Record.</inlineHelpText>
        <label>Household Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_End__c</fullName>
        <description>Low End of Income Bracket. This number will be included.</description>
        <inlineHelpText>Low End of Income Bracket. This number will be included.</inlineHelpText>
        <label>Low End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_People__c</fullName>
        <description>The number of people in the household.</description>
        <inlineHelpText>The number of people in the household.</inlineHelpText>
        <label>Number of People</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Income Level Setting</label>
</CustomObject>